--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -9,4 +9,6 @@
     </div>
     <p class="footer-text">© 2025 Maroof Lone. All rights reserved.</p>
   </div>
+
+  <a href="#" id="privacy-trigger" class="privacy-link">Privacy Notice</a>
 </footer>
