Remove redundant sentence from privacy notice

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -162,7 +162,7 @@
         </div>
         
         <div class="modal-body">
-            <p>This personal website is created and maintained by me. All information shared here is true to the best of my knowledge and understanding. All writings, photos, projects and/or any other material on this site are original unless clearly stated otherwise.</p>
+            <p>This personal website is created and maintained by me. All writings, photos, projects and/or any other material on this site are original unless clearly stated otherwise.</p>
             
             <p>I only collect basic information that helps me understand how visitors use the website. This includes anonymized data such as page views, device type, and general location, which is tracked through Google Analytics. No personally identifiable information is collected unless you choose to share it with me through a contact form or email.</p>
             
