--- a/src/tags.njk
+++ b/src/tags.njk
@@ -9,6 +9,7 @@ pagination:
     - post
     - posts
     - nav
+    - tagList
   addAllPagesToCollections: true
 permalink: /tags/{{ tag | slugify }}/
 eleventyComputed:
