--- a/src/sitemap.njk
+++ b/src/sitemap.njk
@@ -11,6 +11,7 @@ eleventyExcludeFromCollections: true
   {% if page.url 
       and page.url != '/404/' 
       and page.url != '/admin/' 
+      and page.url != '/404.html/'
       and not page.data.draft %}
       
   <url>
