Add eleventyExcludeFromCollections to 404 page

--- a/src/404.njk
+++ b/src/404.njk
@@ -2,6 +2,7 @@
 layout: 'base.njk'
 title: '404 - Not Found'
 permalink: 404.html
+eleventyExcludeFromCollections: true
 ---
 
 <div class="container section error-page-wrapper">
