Added featured projects section

--- a/src/index.njk
+++ b/src/index.njk
@@ -130,6 +130,51 @@ layout: 'base.njk'
     </div>
   </section>
 
+
+<!--- Projects Section Start -->
+<section class="section animate-on-scroll delay-3" id="projects">
+    <div class="container">
+      <h2 class="section-title">Featured Projects</h2>
+      
+      <div class="projects-grid">
+        
+        <div class="project-card">
+          <div class="project-image">
+            <img src="assets/projects/heal-your-heart-og-image.png" alt="Project Screenshot">
+          </div>
+          <div class="project-content">
+            <h3 class="project-title">Heal Your Heart</h3>
+            <p class="project-desc">
+            A spiritual web app that maps human emotions like anger or sadness to comforting Quranic verses, Hadith, and Duas. It features <strong>AI integration</strong> and a minimalist, distraction-free design to provide immediate solace.
+              </p>
+            
+            <div class="project-tech-stack">
+              <span class="tech-pill">HTML</span>
+              <span class="tech-pill">CSS</span>
+              <span class="tech-pill">JS</span>
+              <span class="tech-pill">AI</span>
+            </div>
+
+            <div class="project-links-wrapper">
+              <a href="https://shifa.marooflone.com" target="_blank" class="project-link">
+                <i class="fa-solid fa-arrow-up-right-from-square"></i> Live Demo
+              </a>
+              <a href="#" target="_blank" class="project-link">
+                <i class="fa-brands fa-github"></i> GitHub
+              </a>
+            </div>
+          </div>
+        </div>
+  
+
+      </div>
+    </div>
+  </section>
+
+  <!--- Projects Section End -->
+
+
+
   <section class="section animate-on-scroll delay-4">
     <div class="container">
         <h2 class="section-title">Writings</h2>
