--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -15,7 +15,9 @@
       <a href="/" class="nav-link">Home</a>
       <a href="/#skills" class="nav-link">Skills</a>
       <a href="/#work" class="nav-link">Work</a>
+      <a href="/#projects" class="nav-link">Projects</a>
       <a href="/blog" class="nav-link">Blog</a>
+
       <a href="/contact-me" class="nav-link">Contact <i class="fa-solid fa-bow-arrow" style="margin-left: 6px; font-size: 0.9em;"></i></a>
     </nav>
   </div>
