Add JSON-LD structured data for website
Added structured data for SEO optimization.

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -20,6 +20,7 @@
    
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="{{ title | default('Hi, I\'m Maroof Lone') }}">
+  <meta property="og:site_name" content="Maroof Lone">
   <meta property="og:description" content="{{ description | default('Blogger | CSE Student | Cybersecurity Explorer | Exploring stories, trends, and insights that matter.') }}">
   <meta property="og:image" content="{{ site.url }}{% if image %}{{ image }}{% else %}/assets/images/main-images/og-discription-image.png?v=2{% endif %}">
   <meta property="og:image:width" content="1200">
@@ -53,6 +54,16 @@
 <!-- Netlify CMS -->
  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Maroof Lone",
+  "alternateName": ["Maroof Lone Portfolio", "Maroof's Blog"],
+  "url": "https://www.marooflone.com/"
+}
+</script>
 
 </head>
 <body>
