--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -11,9 +11,7 @@
   <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
 
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets
-  
-  /images/favicon/apple-touch-icon.png?v=2">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png?v=2">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png?v=2">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png?v=2">
   <link rel="manifest" href="/assets/images/favicon/site.webmanifest?v=2">
