Change Netlify Identity script to load with defer

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -50,7 +50,7 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-T20K3YKJP9"></script>
 
 <!-- Netlify CMS -->
- <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+ <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 
 <script type="application/ld+json">
