--- a/src/index.njk
+++ b/src/index.njk
@@ -6,7 +6,7 @@ layout: 'base.njk'
     <div class="container main-content">
       <div class="profile-section">
         <div class="profile-photo-wrapper">
-            <img src="assets/images/main-images/hero-image.jpg?v=2" alt="Maroof Lone" class="profile-photo">
+            <img src="assets/images/main-images/hero-image-reduced.webp" alt="Maroof Lone" class="profile-photo">
         </div>
       </div>
 
