updated footer and blog page margins

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -9,6 +9,7 @@
     </div>
     <p class="footer-text">© 2025 Maroof Lone. All rights reserved.</p>
   </div>
-
-  <a href="#" id="privacy-trigger" class="privacy-link">Privacy Notice</a>
-</footer>
+  
+  <a href="#" id="privacy-trigger" class="privacy-link"><i class="fa-solid fa-shield-halved"></i> Privacy Notice</a>
+  <a href="/contact-me" class="privacy-link"><i class="fa-solid fa-envelope"></i> Contact Me </a>
+  </footer>
