updated homepage skills section

--- a/src/_includes/article.njk
+++ b/src/_includes/article.njk
@@ -42,7 +42,7 @@ layout: 'base.njk'
     {% endif %}
 
     <div class="share-container">
-        <span class="share-label">Enjoyed reading? Share this:</span>
+        <span class="share-label">Found this useful? Pass it on.</span>
         
         <div class="share-btn-group">
             <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url | url }}" target="_blank" rel="noopener noreferrer" class="share-btn fb" aria-label="Share on Facebook">
