--- a/src/index.njk
+++ b/src/index.njk
@@ -44,6 +44,9 @@ layout: 'base.njk'
         <div class="tool-card"><div class="tool-icon"><i class="fa-solid fa-pen-nib icon-content"></i></div><span class="tool-name">Content Writing</span></div>
         <div class="tool-card"><div class="tool-icon"><i class="fa-solid fa-share-nodes icon-content"></i></div><span class="tool-name">Social Media Management</span></div>
         <div class="tool-card"><div class="tool-icon"><i class="fa-brands fa-searchengin icon-content"></i></div><span class="tool-name">SEO</span></div>
+        <div class="tool-card"><div class="tool-icon"><i class="fa-solid fa-layer-group icon-content"></i></div><span class="tool-name">UI Design</span></div>
+        <div class="tool-card"><div class="tool-icon"><i class="fa-solid fa-file-pen icon-content"></i></div><span class="tool-name">Copywriting</span></div>
+
 
 
       </div>
