--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> {{ title | default("Maroof Lone) }} </title>
+  <title> {{ title | default("Maroof Lone") }} </title>
   <meta name="description" content="{{ description | default('Blogger, CSE Student, and Cybersecurity Explorer. Exploring stories, trends, and technology insights.') }}">
   <link rel="canonical" href="https://www.marooflone.com{{ page.url }}">
   <link rel="stylesheet" href="/style.css?v=fix4">
