Changed Title, OG Title

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,5 @@
 ---
-title: Hi, I am Maroof
+title: Maroof Lone | Code, Context & Curiosity
 layout: 'base.njk'
 ---
     <section class="section hero-section animate-on-scroll">
