--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> {{ title | default("Maroof Lone") }} </title>
+  <title> {{ title | default("Maroof Lone | Code, Context & Curiosity") }} </title>
   <meta name="description" content="{{ description | default('Blogger, CSE Student, and Cybersecurity Explorer. Exploring stories, trends, and technology insights.') }}">
   <link rel="canonical" href="https://www.marooflone.com{{ page.url }}">
   <link rel="stylesheet" href="/style.css?v=fix4">
@@ -20,14 +20,14 @@
   <link rel="manifest" href="/assets/images/favicon/site.webmanifest?v=2">
    
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="{{ title | default('Hi, I\'m Maroof Lone') }}">
+  <meta property="og:title" content="{{ title | default('Maroof Lone | Code, Context & Curiosity') }}">
   <meta property="og:site_name" content="Maroof Lone">
   <meta property="og:description" content="{{ description | default('Blogger | CSE Student | Cybersecurity Explorer | Exploring stories, trends, and insights that matter.') }}">
   <meta property="og:image" content="{{ site.url }}{% if image %}{{ image }}{% else %}/assets/images/main-images/og-discription-image.png?v=2{% endif %}">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:url" content="{{ site.url }}{{ page.url }}">
-  <meta property="og:image:alt" content="{{ title | default('Maroof Lone - Blogger and CSE Student') }}">
+  <meta property="og:image:alt" content="{{ title | default('Maroof Lone | Code, Context & Curiosity') }}">
 
 {% if page.url %}
 {% if page.url.startsWith('/blog/') %}
@@ -44,10 +44,10 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image:width" content="1200">
 <meta name="twitter:image:height" content="630">
-<meta name="twitter:title" content="{{ title | default('Hi, I\'m Maroof Lone') }}">
+<meta name="twitter:title" content="{{ title | default('Maroof Lone | Code, Context & Curiosity') }}">
 <meta name="twitter:description" content="{{ description | default('Blogger | CSE Student | Cybersecurity Explorer | Exploring stories, trends, and insights that matter.') }}">
 <meta name="twitter:image" content="{{ site.url }}{% if image %}{{ image }}{% else %}/assets/images/main-images/og-discription-image.png?v=2{% endif %}">
-<meta name="twitter:image:alt" content="{{ title | default('Maroof Lone - Blogger and CSE Student') }}">
+<meta name="twitter:image:alt" content="{{ title | default('Maroof Lone | Code, Context & Curiosity') }}">
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-T20K3YKJP9"></script>
